--- a/.github/workflows/Maven.yml
+++ b/.github/workflows/Maven.yml
@@ -9,7 +9,13 @@ on:
       - fredrik
       - clara
 
-
+  pull_request:
+    branches:
+      - dev
+      - main
+      - jafar
+      - fredrik
+      - clara
 jobs:
   build:
     runs-on: ubuntu-latest
