--- a/.github/workflows/Maven.yml
+++ b/.github/workflows/Maven.yml
@@ -28,7 +28,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B test package --file pom.xml
+        run: mvn -B package --file pom.xml
 
   publish-job:
     runs-on: ubuntu-latest
