--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
-spring.datasource.password=Sommar23
+spring.datasource.password=Jafar_Hussein332
 
 
 # Hibernate
@@ -14,4 +14,4 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-server.port=8080
+server.port=8081
