--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee
+spring.datasource.url=jdbc:mysql://localhost:3306/companydb
 spring.datasource.username=root
-spring.datasource.password=Jafar_Hussein332
+spring.datasource.password=javaintegration
 
 
 # Hibernate
