--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/companydb
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/companydb
+spring.datasource.url=jdbc:mysql://companydb.cjuou2uuwa82.eu-north-1.rds.amazonaws.com:3306/companydb
+spring.datasource.username=
 spring.datasource.password=
 
 
