--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/companydb
-spring.datasource.url=jdbc:mysql://companydb.cjuou2uuwa82.eu-north-1.rds.amazonaws.com/companydb
-spring.datasource.username=root
-spring.datasource.password=Sommar23
+
+spring.datasource.url=${db_url}
+spring.datasource.username=${user}
+spring.datasource.password=${password}
 
 
 # Hibernate
