--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=myusername
+spring.datasource.password=mypassword
 
-spring.datasource.url=jdbc:mysql://companydb.cjuou2uuwa82.eu-north-1.rds.amazonaws.com/companydb
-spring.datasource.username=root
-spring.datasource.password=Sommar23
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/companydb
 
